# Toy_Systolic_Array

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  SystolicArray.cpp  SystolicArray.h  Test_MatMul  Test_OutputStationary  Test_WeightSationary  Test_WeightSationary.cpp  Top.h  main.cpp  matmul.cpp
include/: Matrix.h
include/compute/: SystolicArray.h
include/compute/VecUnit/: MetaVector.h  VectorWarp.h
src/: CMakeLists.txt
src/computation-model/: CMakeLists.txt  Matrix.cpp  SystolicArray.cpp
src/compute-model/: CMakeLists.txt  Matrix.cpp  SystolicArray.cpp
src/compute-model/SystolicArray/: CMakeLists.txt  Matrix.cpp  SystolicArray.cpp
src/compute-model/VectorUnit/: CMakeLists.txt  MetaVector.cpp  README.md  VectorWarp.cpp
src/tests/: CMakeLists.txt  TEST_MetaVector.cpp  Test_MatMul.cpp  Test_MetaVector.cpp  Test_OutputStationary.cpp  Test_RowStationary.cpp  Test_VectorWarp.cpp  Test_WeightSationary.cpp
